<resources>
    <string name="app_name">Book Flight</string>
    <string name="rb1">Ida y Vuelta</string>
    <string name="rb2">Ida</string>
    <string name="btn1">Historial</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date</string>
    <string name="salida">Salida</string>
    <string name="vuelta">Vuelta</string>
    <string name="et5">0</string>
    <string name="tv1">Número máximo de trasbordos:</string>
    <string name="rb3">Ninguna</string>
    <string name="rb4">Una</string>
    <string name="rb5">2 o más</string>
    <string name="btn2">Buscar Vuelos</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="reservas">Ver Reservas</string>
    <string name="title">Confirmación</string>
    <string name="dialog1">¿Estás seguro de que quieres reservar el vuelo?</string>
    <string name="cmenu1">Geoposición ciudad salida</string>
    <string name="cmenu2">Geoposición ciudad llegada</string>
    <string name="cmenu3">Recordatorio</string>
    <string name="cmenu4">Modificar Reserva</string>
    <string name="cmenu5">Eliminar Reserva</string>
</resources>