<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.intents8">

    <item
        android:id="@+id/Cm1"
        android:title="@string/cmenu1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Cmenu2"
        android:title="@string/cmenu2"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/Cmenu3"
        android:title="@string/cmenu3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Cmenu4"
        android:title="@string/cmenu4"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Cmenu5"
        android:title="@string/cmenu5"
        app:showAsAction="never"/>
</menu>